--- a/src/components/CountryCard/countryCard.css
+++ b/src/components/CountryCard/countryCard.css
@@ -1,5 +1,6 @@
 .country-card {
-  width: 300px;
+  max-width: 300px;
+  width: 100%;
   height: 420px;
   border-radius: 10px;
   box-shadow: 0 1px 10px -3px var(--color-grey-400, #aaa);
