--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -5,6 +5,7 @@
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
+	gap: 10px;
 	padding: 50px;
 	position: fixed;
 	top: 0;
