--- a/src/pages/CountryDetail/countryDetail.css
+++ b/src/pages/CountryDetail/countryDetail.css
@@ -5,18 +5,29 @@
   padding: 20px;
   margin: 20px;
   border-radius: 10px;
+  gap: 40px;
 }
 
 .back-button {
+  width: 120px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding: 10px 20px;
-  margin: 20px;
+  gap: 5px;
+  padding: 10px 30px;
   border-radius: 5px;
   box-shadow: 0 1px 10px -3px var(--color-grey-400, #aaa);
   background: #fff;
+}
+
+.back-button:hover {
+  cursor: pointer;
+}
+
+.back-arrow {
+  width: 24px;
+  height: 24px;
 }
 
 .country-detail-content {
@@ -31,8 +42,8 @@
 }
 
 .country-detail h1 {
-  font-size: 2rem;
-  margin-bottom: 20px;
+  font-size: 28px;
+  font-weight: var(--font-weight-bold);
 }
 
 .country-detail-flag {
@@ -50,7 +61,7 @@
   padding: 25px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 40px;
 }
 
 .country-detail .card-content p {
