--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -10,6 +10,11 @@
 	padding: 50px;
 }
 
+.search-container {
+	position: relative;
+	height: 50px;
+}
+
 .search-bar {
 	height: 50px;
 	width: 350px;
@@ -19,9 +24,20 @@
 	box-shadow: 0 1px 10px -3px var(--color-grey-400);
 }
 
+.search-icon {
+	position: absolute;
+	width: 24px;
+	height: 24px;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #888;
+  pointer-events: none;
+}
+
 .region-filter {
 	height: 50px;
-	width: 200px;
+	width: 180px;
 	padding: 10px;
 	border-radius: 5px;
 	border: none;
@@ -31,26 +47,30 @@
 .countries-grid {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat(4, 1fr);
 	gap: 60px;
 }
 
-.country-card {
-	
+@media (max-width: 1280px) {
+	.countries-grid {
+		grid-template-columns: repeat(3, 1fr);
+		gap: 30px;
+	}
 }
 
-.country-flag {
-	
+@media (max-width: 1024px) {
+	.countries-grid {
+		grid-template-columns: repeat(2, 1fr);
+		gap: 30px;
+	}
 }
 
-.country-name {
-	
-}
+@media (max-width: 640px) {
+	.countries-grid {
+		grid-template-columns: repeat(1, 1fr);
+		gap: 30px;
+	}
 
-.country-details {
-	
-}
-
-.country-detail-label {
-	
+	.search-bar {
+		width: 100%;
+	}
 }
