--- a/src/pages/CountryDetail/countryDetail.css
+++ b/src/pages/CountryDetail/countryDetail.css
@@ -74,3 +74,11 @@
   font-weight: bold;
   margin-right: 10px;
 }
+
+.border {
+  width: fit-content;
+  padding: 5px 25px;
+  border-radius: 5px;
+  box-shadow: 0 1px 10px -3px var(--color-grey-400, #aaa);
+  background: #fff;
+}
