--- a/src/pages/CountryDetail/countryDetail.css
+++ b/src/pages/CountryDetail/countryDetail.css
@@ -1,4 +1,5 @@
 .country-detail {
+  /* height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -32,7 +33,7 @@
 
 .country-detail-content {
   width: 100%;
-  max-height: 600px;
+  max-height: 450px;
   height: 100%;
   display: flex;
   flex-direction: row;
